# scoutly

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE.md  cliff.toml  codecov.yml  dist-workspace.toml  lcov.info  lefthook.yml  rust-toolchain.toml
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  quality.yml  release.yml
src/: cli.rs  config.rs  crawler.rs  http_client.rs  lib.rs  link_checker.rs  main.rs  models.rs  reporter.rs  robots.rs  runtime.rs  seo_analyzer.rs  update.rs
src/tui/: app.rs  mod.rs  render.rs
tests/: cli_test.rs  config_test.rs  crawler_test.rs  link_checker_test.rs  main_test.rs  reporter_test.rs  robots_txt_test.rs  seo_analyzer_test.rs  test_bin_exe.rs  update_check_test.rs
tests/server/: mod.rs
tests/static/: crawler-fragments.html  crawler-iframe.html  crawler-media.html  index.html  links-broken.html  links-duplicate.html  links-fragments.html  links-mixed.html  links-redirect.html  links-special-schemes.html  links-unreachable.html  links-working.html  meta-desc-too-long.html  meta-desc-too-short.html  missing-h1.html  missing-image-alt.html  missing-meta-desc.html  missing-title.html  multiple-h1.html  og-complete.html  og-missing.html  thin-content.html  title-too-long.html  title-too-short.html
