[package]
name = "scoutly"
description = "A fast, lightweight CLI website crawler and SEO analyzer built with Rust."
authors = ["Nelson Lai <me@nelsonlai.dev>"]
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
homepage = "https://github.com/nelsonlaidev/scoutly"
repository = "https://github.com/nelsonlaidev/scoutly"
readme = "README.md"
keywords = ["cli", "crawler", "seo", "rust", "web-scraping"]
categories = [
  "command-line-utilities",
  "web-programming",
  "network-programming",
]
rust-version = "1.91"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "rustls-tls",
], default-features = false }
scraper = "0.22"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
