[package]
name = "scoutly"
description = "A fast, lightweight CLI website crawler and SEO analyzer built with Rust."
authors = ["Nelson Lai <me@nelsonlai.dev>"]
version = "0.2.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/nelsonlaidev/scoutly"
repository = "https://github.com/nelsonlaidev/scoutly"
readme = "README.md"
keywords = ["cli", "crawler", "seo", "rust", "web-scraping"]
categories = [
  "command-line-utilities",
  "web-programming",
  "network-programming",
]
rust-version = "1.91"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
reqwest = { version = "0.12", features = [
  "json",
  "gzip",
  "brotli",
  "deflate",
  "rustls-tls",
], default-features = false }
scraper = "0.22"
clap = { version = "4.5", features = ["derive"] }
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
anyhow = "1.0"
futures = "0.3"
chrono = "0.4"
once_cell = "1.20"
tracing = "0.1"
governor = "0.6"
toml = "0.8"
serde_yaml = "0.9"
dirs = "5.0"
indicatif = "0.17"

[dev-dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.14"
serial_test = "3.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
